	PR c++/81607 	* cp-gimplify.c (cp_fold): If folding exposed a branch of 	a COND_EXPR, convert it to the original type of the COND_EXPR, if 	they differ.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-7-branch@251358 138bc75d-0d04-0410-961f-82ee72b054a4